<resources>
    <string name="app_name">MarvelHQ</string>
    <string name="log_in">LOG IN</string>
    <string name="save">SAVE</string>
    <string name="remember">Remember</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_marvel_hq">Welcome to the Marvel HQ\'s</string>
    <string name="create_account">Create account</string>
    <string name="register">Register</string>
    <string name="text_description">This file contains additional information such as Exif metadata
        which may have been added by the digital camera, scanner, or software program used to create
        or digitize it. If the file has been modified from its original state, some details such as
        the timestamp may not fully reflect those of the original file. The timestamp is only as
        accurate as the clock in the camera, and it may be completely wrong.This file contains
        additional information such as Exif metadata which may have been added by the digital camera,
        scanner, or software program used to create or digitize it. If the file has been modified
        from its original state, some details such as the timestamp may not fully reflect those of
        the original file. The timestamp is only as accurate as the clock in the camera, and it may
        be completely wrong.This file contains additional information such as Exif metadata which
        may have been added by the digital camera, scanner, or software program used to create or
        digitize it. If the file has been modified from its original state, some details such as
        the timestamp may not fully reflect those of the original file. The timestamp is only as
        accurate as the clock in the camera, and it may be completely wrong.This file contains
        additional information such as Exif metadata which may have been added by the digital camera,
        scanner, or software program used to create or digitize it. If the file has been modified from its
        original state, some details such as the timestamp may not fully reflect those of the original file.
        The timestamp is only as accurate as the clock in the camera, and it may be completely wrong.</string>
</resources>