<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBlue"
    tools:context=".login.LoginActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_20_dp"
        android:layout_marginEnd="@dimen/dim_20_dp"
        android:backgroundTint="@color/colorPrimary"
        app:cardCornerRadius="@dimen/dim_15_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/welcome_marvel_hq"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="30dp"
                android:layout_marginStart="@dimen/dim_20_dp"
                android:layout_marginEnd="@dimen/dim_20_dp"
                android:textSize="@dimen/dim_28_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_18_dp"
                app:cardCornerRadius="@dimen/dim_15_dp"
                app:layout_constraintTop_toBottomOf="@+id/titleLogin">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtEmailLogin"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dim_20_dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="@dimen/dim_20_dp"
                        android:hint="@string/email"
                        android:textColorHint="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmailLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/colorBlue"
                            android:textSize="@dimen/dim_16_sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtPasswordLogin"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dim_20_dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="@dimen/dim_20_dp"
                        android:hint="@string/password"
                        android:textColorHint="@color/colorPrimary"
                        app:layout_constraintTop_toBottomOf="@+id/txtEmailLogin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPasswordLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:inputType="numberPassword"
                            android:textColor="@color/colorBlue"
                            android:textSize="@dimen/dim_16_sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/checkboxLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textSize="@dimen/dim_24_sp"
                        android:layout_marginTop="@dimen/dim_15_dp"
                        android:layout_marginStart="@dimen/dim_20_dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtPasswordLogin"
                        android:text="@string/remember"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dim_54_dp"
                        app:layout_constraintTop_toBottomOf="@id/checkboxLogin"
                        android:layout_marginStart="@dimen/dim_20_dp"
                        android:layout_marginEnd="@dimen/dim_20_dp"
                        android:layout_marginTop="@dimen/dim_26_dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/log_in"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCreateAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorTransparente"
                        android:text="@string/create_account"
                        android:textColor="@color/colorMediumGray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>



                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>