<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBlue"
    tools:context=".register.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarRegister"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_back_24"
            app:title="@string/register" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_22_dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="@dimen/dim_22_dp"
        android:backgroundTint="@color/colorPrimary"
        app:cardCornerRadius="@dimen/dim_15_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_102_dp"
                app:cardCornerRadius="@dimen/dim_15_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtNameRegister"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dim_18_dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="@dimen/dim_18_dp"
                        android:hint="Name"
                        android:textColorHint="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etNameRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:inputType="text"
                            android:textColor="@color/colorBlue"
                            android:textSize="@dimen/dim_16_sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtEmailRegister"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dim_18_dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="@dimen/dim_18_dp"
                        android:hint="@string/email"
                        android:textColorHint="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtNameRegister">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmailRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/colorBlue"
                            android:textSize="@dimen/dim_16_sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtPasswordRegister"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dim_18_dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="@dimen/dim_18_dp"
                        android:hint="@string/password"
                        android:textColorHint="@color/colorPrimary"
                        app:layout_constraintTop_toBottomOf="@+id/txtEmailRegister">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPasswordRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:inputType="numberPassword"
                            android:textColor="@color/colorBlue"
                            android:textSize="@dimen/dim_16_sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSalvar"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dim_54_dp"
                        android:layout_marginStart="@dimen/dim_18_dp"
                        android:layout_marginTop="@dimen/dim_26_dp"
                        android:layout_marginEnd="@dimen/dim_18_dp"
                        android:layout_marginBottom="@dimen/dim_8_dp"
                        android:text="@string/save"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtPasswordRegister" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/bg_circle_gray"
        android:elevation="@dimen/dim_4_dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarRegister" />

    <ImageView
        android:id="@+id/personCreate"
        android:layout_width="@dimen/dim_96_dp"
        android:layout_height="@dimen/dim_96_dp"
        android:elevation="@dimen/dim_8_dp"
        android:src="@drawable/person_create"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>